
SET(LIBRARIES
  ${OPENGL_LIBRARIES}
  ${EXTRA_LIBRARIES}
  GLEW
  glfw
  three
)

# Simple cube demo
ADD_EXECUTABLE(cube Cube.cpp)
ADD_EXECUTABLE(triangle Triangle.cpp)
ADD_EXECUTABLE(camaro Camaro.cpp)
ADD_EXECUTABLE(text Text.cpp)
ADD_EXECUTABLE(render_to_texture RenderToTexture.cpp)

TARGET_LINK_LIBRARIES(cube ${LIBRARIES})
TARGET_LINK_LIBRARIES(triangle ${LIBRARIES})
TARGET_LINK_LIBRARIES(camaro ${LIBRARIES})
TARGET_LINK_LIBRARIES(text ${LIBRARIES})
TARGET_LINK_LIBRARIES(render_to_texture ${LIBRARIES})
